# ori_term

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-all.sh  build.rs  clippy-all.sh  current_state.md  fmt-all.sh  lefthook.yml  prior_art.md  test-all.sh  test_flood.sh
.claude/commands/: code-hygiene-review.md  commit-push.md  impl-hygiene-review.md  pr-main.md  publish-release.md
.claude/rules/: code-hygiene.md  impl-hygiene.md  test-organization.md
.claude/skills/continue-roadmap/: SKILL.md  (+1 more)
.github/workflows/: release.yml
_old/assets/: oriterm.manifest
_old/plans/: dpr_color-system_02122026.md  dpr_font-rendering_02132026.md
_old/scripts/: release.sh
_old/src/: cell.rs  context_menu.rs  drag.rs  lib.rs  platform_windows.rs  shell_integration.rs  tab_bar.rs  term_mode.rs  window.rs
assets/: icon.rc
examples/: hello.rs  oriterm.rs
oriterm/: Cargo.toml  build.rs
oriterm/src/: main.rs
oriterm_core/: Cargo.toml
oriterm_core/benches/: grid.rs
oriterm_core/src/: cell.rs  index.rs  lib.rs
oriterm_core/src/cell/: mod.rs  tests.rs
oriterm_core/src/color/: mod.rs  palette.rs
oriterm_core/src/color/palette/: tests.rs
oriterm_core/src/event/: mod.rs  tests.rs
oriterm_core/src/grid/: cursor.rs  dirty.rs  editing.rs  mod.rs  navigation.rs  ring.rs  row.rs  scroll.rs  tests.rs
oriterm_core/src/grid/cursor/: mod.rs  tests.rs
oriterm_core/src/grid/dirty/: mod.rs  tests.rs
oriterm_core/src/grid/editing/: mod.rs  tests.rs
oriterm_core/src/grid/navigation/: mod.rs  tests.rs
oriterm_core/src/grid/ring/: mod.rs  tests.rs
oriterm_core/src/grid/row/: mod.rs  tests.rs
oriterm_core/src/grid/scroll/: mod.rs  tests.rs
oriterm_core/src/index/: mod.rs  tests.rs
oriterm_core/src/term/: charset.rs  mod.rs  mode.rs  tests.rs
oriterm_core/src/term/charset/: tests.rs
oriterm_core/src/term/handler/: mod.rs  tests.rs
oriterm_core/src/term/mode/: tests.rs
plans/: dpr_font-rendering_02132026.md  dpr_grid-buffer_02122026.md
plans/roadmap/: 00-overview.md  discovery.md  index.md  section-01-cell-grid.md  section-02-term-vte.md  section-03-cross-platform.md  section-04-pty-eventloop.md  section-05-window-gpu.md  section-06-font-pipeline.md  section-07-ui-framework.md  section-08-keyboard-input.md  section-09-selection-clipboard.md  section-10-mouse-input.md  section-11-search.md  section-12-resize-reflow.md  section-13-config-keybindings.md  section-14-url-detection.md  section-15-tab-management.md  section-16-tab-bar.md  section-17-drag-drop.md  section-18-multi-window.md  section-19-event-routing.md  section-20-shell-integration.md  section-21-context-menu.md  section-22-terminal-modes.md  section-23-performance.md  section-24-visual-polish.md  section-25-theme-system.md  section-26-split-panes.md  section-27-command-palette.md  section-28-extensibility.md
plans/terminal-core/: index.md  plan.md  section-02-vte-sequences.md  section-03-scrollback.md  section-04-resize.md  section-05-color.md  section-06-font-system.md  section-07-gpu-rendering.md  section-08-unicode-graphemes.md  section-10-keyboard.md  section-11-modes-features.md  section-12-search.md  section-13-configuration.md  section-14-cross-platform.md  section-15-performance.md  section-16-split-panes.md  section-17-shell-integration.md  section-18-visual-polish.md  section-19-font-ligatures.md  section-20-themes.md  section-21-command-palette.md  section-22-extensibility.md
plans/threaded-pty/: 00-overview.md  index.md  section-01-shared-state.md  section-02-pty-thread.md  section-05-app-refactor.md
src/: app.rs  cell.rs  clipboard.rs  config.rs  config_monitor.rs  context_menu.rs  drag.rs  grid.rs  icons.rs  key_encoding.rs  keybindings.rs  lib.rs  main.rs  palette.rs  platform_windows.rs  render.rs  search.rs  selection.rs  shell_integration.rs  sync.rs  tab.rs  tab_bar.rs  term_handler.rs  term_mode.rs  url_detect.rs  vte_performer.rs  window.rs
src/app/: config_reload.rs  cursor_hover.rs  event_loop.rs  hover_url.rs  input_keyboard.rs  input_mouse.rs  mod.rs  mouse_coord.rs  mouse_report.rs  mouse_selection.rs  render_coord.rs  search_ui.rs  settings_ui.rs  tab_drag.rs  tab_management.rs  window_management.rs
src/color/: detect.rs  mod.rs  profile.rs
src/config/: io.rs  mod.rs  monitor.rs  tests.rs
src/font/: collection.rs  mod.rs  shaper.rs
src/gpu/: atlas.rs  builtin_glyphs.rs  color_util.rs  instance_writer.rs  mod.rs  pipeline.rs  render_grid.rs  render_overlay.rs  render_settings.rs  render_tab_bar.rs  renderer.rs  state.rs
src/grid/: cursor.rs  dirty.rs  editing.rs  mod.rs  navigation.rs  reflow.rs  row.rs  scroll.rs  stable_index.rs
src/input/: mod.rs
src/key_encoding/: kitty.rs  legacy.rs
src/keybindings/: defaults.rs
src/layout/: mod.rs
src/output/: mod.rs
src/palette/: mod.rs  schemes.rs  tests.rs
src/render/: font_discovery.rs  font_loading.rs  mod.rs
src/search/: find.rs  mod.rs  tests.rs  text.rs
src/selection/: boundaries.rs  mod.rs  tests.rs  text.rs
src/tab/: interceptor.rs  mod.rs  terminal_state.rs  types.rs
src/term_handler/: attr.rs  cursor.rs  erase.rs  input.rs  mod.rs  mode.rs  title.rs
src/terminal/: mod.rs  size.rs
src/text/: mod.rs
src/widgets/: mod.rs
(+72 files in other folders)
