[package]
name = "ori_console"
version = "0.1.0"
edition = "2024"
description = "A Rust console/TUI library that gets terminal interaction right"
license = "MIT"

[dependencies]
crossterm = "0.28"
unicode-width = "0.2"
unicode-segmentation = "1.12"
strip-ansi-escapes = "0.2"
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9.3"
portable-pty = "0.9.0"
vte = { version = "0.15.0", features = ["ansi"] }
bitflags = "2"
log = "0.4"

[[bin]]
name = "oriterm"
path = "src/main.rs"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
enum_glob_use = "deny"
if_not_else = "deny"
nursery = { level = "warn", priority = -1 }
# Allow specific pedantic/nursery lints that are too noisy
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
too_many_arguments = "allow"
use_self = "allow"

[dev-dependencies]
