[package]
name = "ori_console"
version = "0.1.0"
edition = "2024"
description = "A Rust console/TUI library that gets terminal interaction right"
license = "MIT"

[dependencies]
crossterm = "0.28"
unicode-width = "0.2"
unicode-segmentation = "1.12"
strip-ansi-escapes = "0.2"
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9.3"
portable-pty = "0.9.0"
vte = { version = "0.15.0", features = ["ansi"] }
bitflags = "2"
log = "0.4"

[[bin]]
name = "oriterm"
path = "src/main.rs"

[dev-dependencies]
