[package]
name = "oriterm_core"
version = "0.1.0-alpha.3"
edition = "2024"
description = "Core terminal emulation data structures and logic for oriterm"
license = "MIT"

[dependencies]
bitflags = "2"
log = "0.4"
unicode-width = "0.2"
vte = { version = "0.15.0", features = ["ansi"] }

[lints]
workspace = true
